# opengl-player

./: .gitignore  .gitmodules  meson.build  meson.options
src/: player.cpp
subprojects/: av-cpp.wrap  libvc.wrap
vc/: gl.cpp  gl.hpp  noncopyable.hpp  sdl.cpp  sdl.hpp
